# Ossome

./: .env  .gitignore  idea(Ossomehacks) (1).md  implementation_plan.md  originalidea.md  package-lock.json  package.json  pending.md  skills-lock.json
server/: main.py  policy.yaml  requirements.txt  test_backend.py
server/core/: policy_handler.py  security.py  supabase_client.py
server/services/: agents.py  alpaca_trade.py  market_data.py  swarm_engine.py  swarm_prompts.py
server/swarm_analyst/: pyproject.toml
server/swarm_analyst/data/: history.json  stocks.json
server/swarm_analyst/src/: main.py
server/swarm_analyst/src/agents/: aggregator.py  macro_scanner.py  personas.py  scanner.py
server/swarm_analyst/src/core/: config.py  engine.py  history.py  market.py  models.py  ws_manager.py
server/swarm_analyst/src/services/: generator.py
server/swarm_analyst/src/swarm_analyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/swarm_analyst/src/utils/: logger.py
src/: App.tsx  index.css
src/components/auth/: login-view.tsx
src/components/dashboard/: enforcer-overlay.tsx  pipeline-dashboard.tsx  swarm-visualizer.tsx
src/components/ui/: attack-scenarios-scroll.tsx  device-architecture-scroll.tsx  faq.tsx  footer-section.tsx  header-2.tsx  hero-pulse-beams.tsx  modern-stunning-sign-in.tsx  myna-hero.tsx  pricing.tsx  unified-features.tsx
src/pages/: ai-builder.tsx  landing-page.tsx
